--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^10.0.0",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-filesystem": "^3.7.1",
@@ -27,6 +29,7 @@
     "gatsby-transformer-sharp": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
