--- a/studio/package.json
+++ b/studio/package.json
@@ -14,17 +14,18 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.11.1",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.11.0",
-    "@sanity/default-layout": "^2.11.1",
-    "@sanity/default-login": "^2.11.1",
-    "@sanity/desk-tool": "^2.11.1",
-    "@sanity/vision": "^2.11.0",
+    "@sanity/base": "^2.21.3",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.21.3",
+    "@sanity/default-layout": "^2.21.3",
+    "@sanity/default-login": "^2.21.3",
+    "@sanity/desk-tool": "^2.21.3",
+    "@sanity/vision": "^2.21.3",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "sanity-plugin-dark-theme-blue": "^1.0.1"
+    "sanity-plugin-dark-theme-blue": "^1.0.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {}
 }
