added data query from studio to site pages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fontsource/great-vibes": "^4.5.0",
     "@fontsource/open-sans": "^4.5.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "babel-plugin-styled-components": "^1.13.2",
     "dotenv": "^10.0.0",
     "gatsby": "^3.6.2",
